CVT-26: fix broken layout when there is vertical scroll area

--- a/src/renderer/assets/css/main.css
+++ b/src/renderer/assets/css/main.css
@@ -18,6 +18,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow-y: hidden;
 }
 
 body {
